feat: Improve Test configuration and use Mockito istead of PowerMock for static mocking - MEED-1451 - Meeds-io/MIPs#42 (#765)
Due to changes in bottom layers, with configurations cleanup, we are
able to reduce test configuration and avoid redondance by just importing
artifacts in pom.xml, this way PortalContainer.getInstance() will not
raise an exception anymore, even without additional configuration
settings.